--- a/templates/frontend/nav.html.twig
+++ b/templates/frontend/nav.html.twig
@@ -12,7 +12,7 @@
                 <a class="nav-link text-whiteb mg-top-15per" href="{{ path("index") }}">Úvod<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-whiteb mg-top-15per" href="#">Jídelníček</a>
+                <a class="nav-link text-whiteb mg-top-15per" href="{{ path("menu") }}">Jídelníček</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-whiteb mg-top-15per" href="{{ path("forparents") }}">Pro rodiče</a>
