--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 text-center">
+                        <div class="col-12 text-center mg-top-120">
                             <footer>
                                 © 2021 Všechna práva vyhrazena.
                             </footer>
