--- a/templates/frontend/nav.html.twig
+++ b/templates/frontend/nav.html.twig
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="col-6 offset-1 text-nadpis">Vítejte na stránkách<br/>mateřské školy Krupá.</div>
     <div class="col-4">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon float-right"></span>
         </button>
     </div>
     <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
